[gd_scene load_steps=5 format=3 uid="uid://c856hihjj58j"]

[ext_resource type="Script" path="res://scenes/LogicQuestB.gd" id="1_script"]
[ext_resource type="Theme" path="res://ui/theme_noir_pencil.tres" id="2_theme"]
[ext_resource type="Shader" path="res://ui/shaders/noir_pencil_overlay.gdshader" id="3_shader"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_noir"]
shader = ExtResource("3_shader")
shader_parameter/intensity = 0.34
shader_parameter/grain_strength = 0.33
shader_parameter/hatch_strength = 0.26
shader_parameter/vignette_strength = 0.42
shader_parameter/fx_quality = 1
shader_parameter/pulse = 0.0
shader_parameter/jitter_strength = 0.0

[node name="LogicQuestB" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_theme")
script = ExtResource("1_script")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.05, 0.05, 0.05, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 100

[node name="NoirOverlay" type="ColorRect" parent="CanvasLayer"]
material = SubResource("ShaderMaterial_noir")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 1, 1, 0)

[node name="MainLayout" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 16.0
offset_top = 12.0
offset_right = -16.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 8
alignment = 1

[node name="Header" type="HBoxContainer" parent="MainLayout"]
layout_mode = 2
alignment = 1

[node name="BtnBack" type="Button" parent="MainLayout/Header"]
custom_minimum_size = Vector2(120, 56)
layout_mode = 2
text = "НАЗАД"

[node name="LblClueTitle" type="Label" parent="MainLayout/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "ДЕТЕКТОР ЛЖИ B-01"

[node name="LblSessionId" type="Label" parent="MainLayout/Header"]
layout_mode = 2
size_flags_horizontal = 3
text = "СЕССИЯ: 00/00 • CASE B_00"
horizontal_alignment = 2

[node name="BarsRow" type="HBoxContainer" parent="MainLayout"]
layout_mode = 2
alignment = 1

[node name="FactsBar" type="ProgressBar" parent="MainLayout/BarsRow"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_horizontal = 3
show_percentage = false

[node name="EnergyBar" type="ProgressBar" parent="MainLayout/BarsRow"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2
size_flags_horizontal = 3
value = 100.0
show_percentage = false

[node name="TargetDisplay" type="PanelContainer" parent="MainLayout"]
layout_mode = 2

[node name="LblTarget" type="Label" parent="MainLayout/TargetDisplay"]
layout_mode = 2
text = "ШАГ 1/3: выберите слот и установите 2 модуля"
horizontal_alignment = 1

[node name="TerminalFrame" type="PanelContainer" parent="MainLayout"]
layout_mode = 2
size_flags_vertical = 3

[node name="TerminalScroll" type="ScrollContainer" parent="MainLayout/TerminalFrame"]
layout_mode = 2

[node name="TerminalRichText" type="RichTextLabel" parent="MainLayout/TerminalFrame/TerminalScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true
text = "[b]БРИФИНГ[/b]"
fit_content = true

[node name="InteractionRow" type="HBoxContainer" parent="MainLayout"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="InputAFrame" type="PanelContainer" parent="MainLayout/InteractionRow"]
custom_minimum_size = Vector2(200, 96)
layout_mode = 2

[node name="InputAVBox" type="VBoxContainer" parent="MainLayout/InteractionRow/InputAFrame"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="InputATitle" type="Label" parent="MainLayout/InteractionRow/InputAFrame/InputAVBox"]
layout_mode = 2
text = "ВХОД A"
horizontal_alignment = 1

[node name="InputA_Btn" type="Button" parent="MainLayout/InteractionRow/InputAFrame/InputAVBox"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
toggle_mode = true
text = "A\n[0]"

[node name="InputBFrame" type="PanelContainer" parent="MainLayout/InteractionRow"]
custom_minimum_size = Vector2(200, 96)
layout_mode = 2

[node name="InputBVBox" type="VBoxContainer" parent="MainLayout/InteractionRow/InputBFrame"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="InputBTitle" type="Label" parent="MainLayout/InteractionRow/InputBFrame/InputBVBox"]
layout_mode = 2
text = "ВХОД B"
horizontal_alignment = 1

[node name="InputB_Btn" type="Button" parent="MainLayout/InteractionRow/InputBFrame/InputBVBox"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
toggle_mode = true
text = "B\n[0]"

[node name="InputCFrame" type="PanelContainer" parent="MainLayout/InteractionRow"]
custom_minimum_size = Vector2(200, 96)
layout_mode = 2

[node name="InputCVBox" type="VBoxContainer" parent="MainLayout/InteractionRow/InputCFrame"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="InputCTitle" type="Label" parent="MainLayout/InteractionRow/InputCFrame/InputCVBox"]
layout_mode = 2
text = "ВХОД C"
horizontal_alignment = 1

[node name="InputC_Btn" type="Button" parent="MainLayout/InteractionRow/InputCFrame/InputCVBox"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
toggle_mode = true
text = "C\n[0]"

[node name="Slot1Frame" type="PanelContainer" parent="MainLayout/InteractionRow"]
custom_minimum_size = Vector2(200, 96)
layout_mode = 2

[node name="Slot1VBox" type="VBoxContainer" parent="MainLayout/InteractionRow/Slot1Frame"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Slot1Title" type="Label" parent="MainLayout/InteractionRow/Slot1Frame/Slot1VBox"]
layout_mode = 2
text = "SLOT 1"
horizontal_alignment = 1

[node name="Slot1SelectBtn" type="Button" parent="MainLayout/InteractionRow/Slot1Frame/Slot1VBox"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
text = "УСТАНОВИТЬ\n?"

[node name="Slot2Frame" type="PanelContainer" parent="MainLayout/InteractionRow"]
custom_minimum_size = Vector2(200, 96)
layout_mode = 2

[node name="Slot2VBox" type="VBoxContainer" parent="MainLayout/InteractionRow/Slot2Frame"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="Slot2Title" type="Label" parent="MainLayout/InteractionRow/Slot2Frame/Slot2VBox"]
layout_mode = 2
text = "SLOT 2"
horizontal_alignment = 1

[node name="Slot2SelectBtn" type="Button" parent="MainLayout/InteractionRow/Slot2Frame/Slot2VBox"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
text = "УСТАНОВИТЬ\n?"

[node name="InterSlot" type="PanelContainer" parent="MainLayout/InteractionRow"]
custom_minimum_size = Vector2(160, 96)
layout_mode = 2

[node name="InterVBox" type="VBoxContainer" parent="MainLayout/InteractionRow/InterSlot"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="InterTitle" type="Label" parent="MainLayout/InteractionRow/InterSlot/InterVBox"]
layout_mode = 2
text = "INTER"
horizontal_alignment = 1

[node name="InterValueLabel" type="Label" parent="MainLayout/InteractionRow/InterSlot/InterVBox"]
layout_mode = 2
text = "I = 0"
horizontal_alignment = 1

[node name="OutputSlot" type="PanelContainer" parent="MainLayout/InteractionRow"]
custom_minimum_size = Vector2(160, 96)
layout_mode = 2

[node name="OutputVBox" type="VBoxContainer" parent="MainLayout/InteractionRow/OutputSlot"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="OutputTitle" type="Label" parent="MainLayout/InteractionRow/OutputSlot/OutputVBox"]
layout_mode = 2
text = "OUTPUT"
horizontal_alignment = 1

[node name="OutputValueLabel" type="Label" parent="MainLayout/InteractionRow/OutputSlot/OutputVBox"]
layout_mode = 2
text = "F = 0"
horizontal_alignment = 1

[node name="InventoryFrame" type="PanelContainer" parent="MainLayout"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="InventoryMargin" type="MarginContainer" parent="MainLayout/InventoryFrame"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="InventoryScroll" type="ScrollContainer" parent="MainLayout/InventoryFrame/InventoryMargin"]
layout_mode = 2

[node name="GatesContainer" type="HBoxContainer" parent="MainLayout/InventoryFrame/InventoryMargin/InventoryScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 14
alignment = 1

[node name="GateAndBtn" type="Button" parent="MainLayout/InventoryFrame/InventoryMargin/InventoryScroll/GatesContainer"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
toggle_mode = true
text = "∧ AND"

[node name="GateOrBtn" type="Button" parent="MainLayout/InventoryFrame/InventoryMargin/InventoryScroll/GatesContainer"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
toggle_mode = true
text = "∨ OR"

[node name="GateNotBtn" type="Button" parent="MainLayout/InventoryFrame/InventoryMargin/InventoryScroll/GatesContainer"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
toggle_mode = true
text = "¬ NOT"

[node name="GateXorBtn" type="Button" parent="MainLayout/InventoryFrame/InventoryMargin/InventoryScroll/GatesContainer"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
toggle_mode = true
text = "⊕ XOR"

[node name="GateNandBtn" type="Button" parent="MainLayout/InventoryFrame/InventoryMargin/InventoryScroll/GatesContainer"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
toggle_mode = true
text = "⊼ NAND"

[node name="GateNorBtn" type="Button" parent="MainLayout/InventoryFrame/InventoryMargin/InventoryScroll/GatesContainer"]
custom_minimum_size = Vector2(128, 64)
layout_mode = 2
toggle_mode = true
text = "⊽ NOR"

[node name="StatusRow" type="HBoxContainer" parent="MainLayout"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="StatsLabel" type="Label" parent="MainLayout/StatusRow"]
layout_mode = 2
size_flags_horizontal = 3
text = "ПОП: 0/3 • ТЕСТЫ: 0 • СТАБ: 100%"

[node name="FeedbackLabel" type="Label" parent="MainLayout/StatusRow"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "..."
horizontal_alignment = 2

[node name="Actions" type="HBoxContainer" parent="MainLayout"]
layout_mode = 2
theme_override_constants/separation = 16
alignment = 1

[node name="BtnHint" type="Button" parent="MainLayout/Actions"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
text = "ПОДСКАЗКА"

[node name="BtnTest" type="Button" parent="MainLayout/Actions"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "ПРОВЕРИТЬ"

[node name="BtnNext" type="Button" parent="MainLayout/Actions"]
visible = false
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
size_flags_horizontal = 3
text = "ДАЛЕЕ"

[node name="ClickPlayer" type="AudioStreamPlayer" parent="."]

[node name="DiagnosticsBlocker" type="ColorRect" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
color = Color(0, 0, 0, 0.45)

[node name="DiagnosticsPanelB" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -360.0
offset_top = -210.0
offset_right = 360.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0

[node name="PopupMargin" type="MarginContainer" parent="DiagnosticsPanelB"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PopupVBox" type="VBoxContainer" parent="DiagnosticsPanelB/PopupMargin"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="PopupTitle" type="Label" parent="DiagnosticsPanelB/PopupMargin/PopupVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
text = "SAFE MODE"
horizontal_alignment = 1

[node name="PopupText" type="RichTextLabel" parent="DiagnosticsPanelB/PopupMargin/PopupVBox"]
layout_mode = 2
size_flags_vertical = 3
bbcode_enabled = true
text = "Диагностический отчёт."
fit_content = true

[node name="PopupBtnNext" type="Button" parent="DiagnosticsPanelB/PopupMargin/PopupVBox"]
custom_minimum_size = Vector2(0, 56)
layout_mode = 2
text = "ДАЛЕЕ"

[connection signal="pressed" from="MainLayout/Header/BtnBack" to="." method="_on_back_button_pressed"]
[connection signal="toggled" from="MainLayout/InteractionRow/InputAFrame/InputAVBox/InputA_Btn" to="." method="_on_input_a_toggled"]
[connection signal="toggled" from="MainLayout/InteractionRow/InputBFrame/InputBVBox/InputB_Btn" to="." method="_on_input_b_toggled"]
[connection signal="toggled" from="MainLayout/InteractionRow/InputCFrame/InputCVBox/InputC_Btn" to="." method="_on_input_c_toggled"]
[connection signal="pressed" from="MainLayout/InteractionRow/Slot1Frame/Slot1VBox/Slot1SelectBtn" to="." method="_on_slot1_pressed"]
[connection signal="pressed" from="MainLayout/InteractionRow/Slot2Frame/Slot2VBox/Slot2SelectBtn" to="." method="_on_slot2_pressed"]
[connection signal="toggled" from="MainLayout/InventoryFrame/InventoryMargin/InventoryScroll/GatesContainer/GateAndBtn" to="." method="_on_gate_button_toggled" binds= ["AND"]]
[connection signal="toggled" from="MainLayout/InventoryFrame/InventoryMargin/InventoryScroll/GatesContainer/GateOrBtn" to="." method="_on_gate_button_toggled" binds= ["OR"]]
[connection signal="toggled" from="MainLayout/InventoryFrame/InventoryMargin/InventoryScroll/GatesContainer/GateNotBtn" to="." method="_on_gate_button_toggled" binds= ["NOT"]]
[connection signal="toggled" from="MainLayout/InventoryFrame/InventoryMargin/InventoryScroll/GatesContainer/GateXorBtn" to="." method="_on_gate_button_toggled" binds= ["XOR"]]
[connection signal="toggled" from="MainLayout/InventoryFrame/InventoryMargin/InventoryScroll/GatesContainer/GateNandBtn" to="." method="_on_gate_button_toggled" binds= ["NAND"]]
[connection signal="toggled" from="MainLayout/InventoryFrame/InventoryMargin/InventoryScroll/GatesContainer/GateNorBtn" to="." method="_on_gate_button_toggled" binds= ["NOR"]]
[connection signal="pressed" from="MainLayout/Actions/BtnHint" to="." method="_on_hint_pressed"]
[connection signal="pressed" from="MainLayout/Actions/BtnTest" to="." method="_on_test_pressed"]
[connection signal="pressed" from="MainLayout/Actions/BtnNext" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="DiagnosticsPanelB/PopupMargin/PopupVBox/PopupBtnNext" to="." method="_on_diagnostics_close_pressed"]
